# libpolystr

./: .gitignore  CMakeLists.txt
cmake/: libpolystr-config-version.cmake
include/: polystr.h
include/polystr/: common.h  pool.h
src/: pool.c
tests/: test-pool.c
